Segundo commit parrafo

--- a/holaMundo.html
+++ b/holaMundo.html
@@ -9,7 +9,7 @@
 <body>
     <h1>Esta es mi primera página web</h1>
     <h2>Este es un titulo</h2>
-    <h3></h3>
+    <h3>Este es mi primer parrafo en html</h3>
     <h4></h4>
 </body>
 </html>
@@ -19,6 +19,7 @@
 <!--
     GIT
     U: Untracked : directorio de trabajo
-    A: index Added: paso el archivo al index, dond epuedo hacer un commit (instanatnea del trabajo)
+    A: index Added: paso el archivo al index, dond puedo hacer un commit (instantanea del trabajo)
     
+
 -->
