--- a/holaMundo.html
+++ b/holaMundo.html
@@ -11,7 +11,7 @@
     <h2>Este es un titulo</h2>
         <p>Este es mi primer parrafo en html</p>
     <h3>Este es un titulo h3</h3>
-    <h4></h4>
+    <h4>Este es un titulo h4</h4>
 </body>
 </html>
 
@@ -21,6 +21,7 @@
     GIT
     U: Untracked : directorio de trabajo
     A: index Added: paso el archivo al index, dond puedo hacer un commit (instantanea del trabajo)
+
+    -m: mensaje
     
 
--->
