--- a/holaMundo.html
+++ b/holaMundo.html
@@ -12,6 +12,7 @@
         <p>Este es mi primer parrafo en html</p>
     <h3>Este es un titulo h3</h3>
     <h4>Este es un titulo h4</h4>
+    <h5>Este es un titulo h5</h5>
 </body>
 </html>
 
@@ -23,5 +24,5 @@
     A: index Added: paso el archivo al index, dond puedo hacer un commit (instantanea del trabajo)
 
     -m: mensaje
-    
+-->    
 
