--- a/holaMundo.html
+++ b/holaMundo.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html> <!--LENGUAJE DE MARCADO: etiuqetas <> -->
 <html lang="en">
-<head> <!--informativo-->
+<head> <!--metadatos: informativo-->
     <meta charset="UTF-8"> <!--meta: metadatos-->
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- viewport: hace a la aplicacion responsiva, adapta el ancho de la pagina al ancho del dispositivo -->
     <title>Document</title>
 </head>
 <body>
