Actualizando Mintic ciclo3 - 29/08/2022

--- a/ejemplo1.html
+++ b/ejemplo1.html
@@ -4,16 +4,46 @@
     <meta charset="UTF-8"> <!--meta: metadatos-->
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="estilos.css">
     <!-- viewport: hace a la aplicacion responsiva, adapta el ancho de la pagina al ancho del dispositivo -->
-    <title>Document</title>
+    <title>Ejemplo1</title>
 </head>
 <body>
     <h1>Tipos de datos primitivos en java</h1>
     <h2>Tipo int</h2>
     <p>Es un tipo de datos de <strong>32 bits</strong> con signo.<br>
-    Su rango bva es entre -2 a la 31 hasta 2 a la 31 menos uno</p>
+    Su rango bva es entre -2 a la 31 hasta 2 a la 31 menos uno.</p>
     <h2>Tipo float</h2>
     <p>Es un tipo de datos para almacenar numeroc con coma flotante de precision <em>64 bits</em> </p>
+    <a href="holaMundo.html">Hola Mundo</a><br>
+    <a href="https://www.google.com/">Buscador de google</a> <br>
+    <!-- Al usar imagenes es importante tomarlas de stocks libres o tener cuidado con derechos autor  -->
+    <img src="informatica.jpg" alt="informática" width="500" height="300">
+    <p id="parrafo">PARRAFO DE PRUEBA</p>
+
+    <ol>
+        <li>Tipo int</li>
+        <li>Tipo float</li>
+        <li>Tipo boolean</li>
+    </ol>
     
+    <ul>
+        <li>Tipo int</li>
+        <li>Tipo float</li>
+        <li>Tipo boolean</li>
+    </ul>
+
+    <table class="tabla" border="1">
+        <caption><strong>Tipos de datos primitivos en java</strong></caption>
+        <tr>
+            <th>Tipo</th><th>Tamaño</th><th>Valor maximo</th>
+        </tr>
+        <tr>
+            <td>int</td><td>32 bits</td><td>2147483647</td>
+        </tr>
+        <tr>
+            <td>float</td><td>32 bits</td><td>3.402826e28</td>
+        </tr>
+    </table>
 </body>
 </html>
