--- a/holaMundo.html
+++ b/holaMundo.html
@@ -17,7 +17,7 @@
 </body>
 </html>
 
-<!--127.0.0.1 IP privada para usar el equipo como servidor-->>
+<!--127.0.0.1 IP privada para usar el equipo como servidor-->
 
 <!--
     GIT
